--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   easy_refresh: ^3.3.4
+  flutter_native_splash: ^2.4.0
 
 flutter_launcher_icons:
   android:
