--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   hive_generator: ^2.0.1
   easy_refresh: ^3.3.4
   flutter_native_splash: ^2.4.0
+  mockito: ^5.4.4
 
 flutter_launcher_icons:
   android:
@@ -64,6 +65,8 @@ flutter_launcher_icons:
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
   flutter_lints: ^3.0.0
   build_runner: ^2.4.6
