--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,6 @@ dependencies:
   hive_generator: ^2.0.1
   easy_refresh: ^3.3.4
   flutter_native_splash: ^2.4.0
-  mockito: ^5.4.4
 
 flutter_launcher_icons:
   android:
@@ -61,13 +60,15 @@ flutter_launcher_icons:
   image_path_android: 'assets/icon/observatory.png'
   image_path_ios: 'assets/icon/observatory_ios.png'
 
-
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  mockito: ^5.4.4
   flutter_lints: ^3.0.0
   build_runner: ^2.4.6
   freezed: ^2.4.2
