--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   hive_generator: ^2.0.1
   easy_refresh: ^3.3.4
   flutter_native_splash: ^2.4.0
+  emulators: ^0.5.1
 
 flutter_launcher_icons:
   android:
