--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,6 @@ dependencies:
   hive_generator: ^2.0.1
   easy_refresh: ^3.3.4
   flutter_native_splash: ^2.4.0
-  emulators: ^0.5.1
 
 flutter_launcher_icons:
   android:
@@ -77,6 +76,8 @@ dev_dependencies:
   lints: ^3.0.0
   custom_lint: 
   riverpod_lint: 
+  emulators: ^0.5.1
+  test:
 
 flutter:
   uses-material-design: true
