--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: observatory
-description: A new Flutter project.
+description: Game price tracker.
 publish_to: 'none' 
-version: 1.0.0+1
+version: 1.0.1
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
