--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   easy_refresh: ^3.3.5+1
+  firebase_analytics: ^10.10.5
 
 flutter_launcher_icons:
   android:
