--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: observatory
 description: Game price tracker.
 publish_to: 'none' 
-version: 1.0.2
+version: 1.0.3
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -29,7 +29,7 @@ dependencies:
   path_provider: ^2.1.1
   go_router: ^14.1.0
   share_plus: ^9.0.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   get_it: ^7.6.4
   font_awesome_flutter: ^10.5.0
   firebase_crashlytics: ^3.5.5
@@ -44,8 +44,11 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
-  easy_refresh: ^3.3.5+1
+  easy_refresh: ^3.4.0
   firebase_analytics: ^10.10.5
+
+dependency_overrides:
+  intl: any
 
 flutter_launcher_icons:
   android:
