--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   hive_generator: ^2.0.1
   easy_refresh: ^3.4.0
   firebase_analytics: ^10.10.5
+  awesome_notifications: ^0.9.3+1
 
 dependency_overrides:
   intl: any
