--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,10 @@ dependencies:
   easy_refresh: ^3.4.0
   firebase_analytics: ^10.10.5
   awesome_notifications: ^0.9.3+1
-  workmanager: ^0.5.2
+  workmanager:
+    git:
+        url: https://github.com/fluttercommunity/flutter_workmanager.git
+        ref: b783000
 
 dependency_overrides:
   intl: any
