Remove upload-dsym script

--- a/.gitignore
+++ b/.gitignore
@@ -244,6 +244,7 @@ google-services.json
 GoogleService-Info.plist
 firebase_options.dart
 firebase_app_id_file.json
+firebase.json
 
 # Plugins (already resolved through pubspec.yaml)
 .flutter-plugins
