--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
         url: https://github.com/fluttercommunity/flutter_workmanager.git
         ref: b783000
   photo_view: ^0.15.0
-  cloud_functions: ^4.7.6
+  supabase_flutter: ^2.5.4
 
 dependency_overrides:
   intl: any
