--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   photo_view: ^0.15.0
   supabase_flutter: ^2.5.4
   uuid: ^4.4.0
+  shimmer: ^3.0.0
 
 dependency_overrides:
   intl: any
