--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,6 +23,7 @@ linter:
   rules:
     constant_identifier_names: false
     non_constant_identifier_names: false
+    use_key_in_widget_constructors: true
     prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
 
