--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,20 +32,20 @@ dependencies:
   intl: ^0.19.0
   get_it: ^7.6.4
   font_awesome_flutter: ^10.5.0
-  firebase_crashlytics: ^3.5.5
-  firebase_core: ^2.31.0
+  firebase_crashlytics: ^4.0.0
+  firebase_core: ^3.0.0
   flutter_form_builder: ^9.1.1
-  form_builder_validators: ^9.1.0
+  form_builder_validators: ^10.0.1
   flutter_slidable: ^3.1.0
   collection: ^1.18.0
   awesome_flutter_extensions: ^1.1.1
-  firebase_app_check: ^0.2.2+5
+  firebase_app_check: ^0.3.0
   in_app_purchase: ^3.1.13
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   easy_refresh: ^3.4.0
-  firebase_analytics: ^10.10.5
+  firebase_analytics: ^11.0.0
   awesome_notifications: ^0.9.3+1
   workmanager:
     git:
@@ -80,7 +80,7 @@ dev_dependencies:
   mockito: ^5.4.4
   flutter_lints: ^4.0.0
   build_runner: ^2.4.6
-  freezed: ^2.4.2
+  freezed: ^2.5.2
   json_serializable: ^6.8.0
   lints: ^4.0.0
   custom_lint: 
