--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   uuid: ^4.4.0
   shimmer: ^3.0.0
   lzstring: ^2.0.0+2
+  supabase: ^2.2.2
+  riverpod_generator: ^2.4.0
+  riverpod_annotation: ^2.3.5
 
 dependency_overrides:
   intl: any
