--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,39 +1,39 @@
 name: observatory
 description: Game price tracker.
-publish_to: 'none' 
+publish_to: "none"
 version: 1.1.1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
-  url_launcher: ^6.1.14
+  cupertino_icons: ^1.0.8
+  url_launcher: ^6.3.0
   uni_links: ^0.5.1
   flutter_riverpod: ^2.5.1
-  cached_network_image: ^3.2.3
-  flutter_spinkit: ^5.2.0
+  cached_network_image: ^3.3.1
+  flutter_spinkit: ^5.2.1
   freezed_annotation: ^2.4.1
-  json_annotation: ^4.9.0 
-  dio: ^5.3.2
-  logger: ^2.0.2
+  json_annotation: ^4.9.0
+  dio: ^5.4.3+1
+  logger: ^2.3.0
   flex_color_scheme: ^7.3.1
   google_fonts: ^6.2.1
   html_unescape: ^2.0.0
-  country_picker: ^2.0.25
-  dio_cache_interceptor: ^3.4.2
-  dio_cache_interceptor_hive_store: ^3.2.1
-  path_provider: ^2.1.1
-  go_router: ^14.1.0
+  country_picker: ^2.0.26
+  dio_cache_interceptor: ^3.5.0
+  dio_cache_interceptor_hive_store: ^3.2.2
+  path_provider: ^2.1.3
+  go_router: ^14.2.0
   share_plus: ^9.0.0
   intl: ^0.19.0
-  get_it: ^7.6.4
-  font_awesome_flutter: ^10.5.0
-  firebase_crashlytics: ^4.0.0
-  firebase_core: ^3.0.0
+  get_it: ^7.7.0
+  font_awesome_flutter: ^10.7.0
+  firebase_crashlytics: ^4.0.2
+  firebase_core: ^3.1.1
   flutter_form_builder: ^9.1.1
   form_builder_validators: ^10.0.1
   flutter_slidable: ^3.1.0
@@ -49,16 +49,13 @@ dependencies:
   awesome_notifications: ^0.9.3+1
   workmanager:
     git:
-        url: https://github.com/fluttercommunity/flutter_workmanager.git
-        ref: b783000
+      url: https://github.com/fluttercommunity/flutter_workmanager.git
+      ref: b783000
   photo_view: ^0.15.0
   supabase_flutter: ^2.5.4
   uuid: ^4.4.0
-  shimmer: ^3.0.0
   lzstring: ^2.0.0+2
   supabase: ^2.2.2
-  riverpod_generator: ^2.4.0
-  riverpod_annotation: ^2.3.5
 
 dependency_overrides:
   intl: any
@@ -70,8 +67,8 @@ flutter_launcher_icons:
   ios:
     generate: true
     background_color: "#FFFFFF"
-  image_path_android: 'assets/icon/observatory.png'
-  image_path_ios: 'assets/icon/observatory_ios.png'
+  image_path_android: "assets/icon/observatory.png"
+  image_path_ios: "assets/icon/observatory_ios.png"
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -87,8 +84,8 @@ dev_dependencies:
   freezed: ^2.5.2
   json_serializable: ^6.8.0
   lints: ^4.0.0
-  custom_lint: 
-  riverpod_lint: 
+  custom_lint:
+  riverpod_lint:
   emulators: ^0.5.1
   test:
   flutter_native_splash: ^2.4.0
