--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: observatory
 description: Game price tracker.
 publish_to: "none"
-version: 1.1.1
+version: 1.2.0
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -34,25 +34,25 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   firebase_crashlytics: ^4.0.2
   firebase_core: ^3.1.1
-  flutter_form_builder: ^9.1.1
+  flutter_form_builder: ^9.3.0
   form_builder_validators: ^10.0.1
   flutter_slidable: ^3.1.0
   collection: ^1.18.0
-  awesome_flutter_extensions: ^1.1.1
-  firebase_app_check: ^0.3.0
-  in_app_purchase: ^3.1.13
+  awesome_flutter_extensions: ^1.2.0
+  firebase_app_check: ^0.3.0+2
+  in_app_purchase: ^3.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   easy_refresh: ^3.4.0
-  firebase_analytics: ^11.0.0
+  firebase_analytics: ^11.1.0
   awesome_notifications: ^0.9.3+1
   workmanager:
     git:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
       ref: b783000
   photo_view: ^0.15.0
-  supabase_flutter: ^2.5.4
+  supabase_flutter: ^2.5.6
   uuid: ^4.4.0
   lzstring: ^2.0.0+2
   supabase: ^2.2.2
