--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "observatory-gh-pages",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://benjamindean.github.io/observatory/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,6 +48,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.3.3",
     "daisyui": "^4.12.10",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.4"
   }
 }
