--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   supabase: ^2.2.2
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.5.1
+  icloud_storage: ^2.2.0
 
 dependency_overrides:
   intl: any
