--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -17,6 +17,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:benjamindean.github.io</string>
+		<string>webcredentials:benjamindean.github.io</string>
 	</array>
 </dict>
 </plist>
