--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
-  dio: ^5.5.0+1
+  dio: ^5.6.0
   logger: ^2.3.0
   flex_color_scheme: ^7.3.1
   google_fonts: ^6.2.1
@@ -27,14 +27,14 @@ dependencies:
   dio_cache_interceptor: ^3.5.0
   dio_cache_interceptor_hive_store: ^3.2.2
   path_provider: ^2.1.3
-  go_router: ^14.2.0
+  go_router: ^14.2.6
   share_plus: ^10.0.0
   intl: ^0.19.0
   get_it: ^7.7.0
   font_awesome_flutter: ^10.7.0
   firebase_crashlytics: ^4.0.4
   firebase_core: ^3.3.0
-  flutter_form_builder: ^9.3.0
+  flutter_form_builder: ^9.4.1
   form_builder_validators: ^11.0.0
   flutter_slidable: ^3.1.0
   collection: ^1.18.0
@@ -51,12 +51,12 @@ dependencies:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
       ref: b783000
   photo_view: ^0.15.0
-  supabase_flutter: ^2.5.11
+  supabase_flutter: ^2.6.0
   uuid: ^4.4.0
   lzstring: ^2.0.0+2
-  supabase: ^2.2.2
+  supabase: ^2.3.0
   flutter_hooks: ^0.20.5
-  hooks_riverpod: ^2.5.1
+  hooks_riverpod: ^2.5.2
   app_links: ^6.2.0
   fl_chart: ^0.68.0
 
