--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,11 +1,9 @@
 plugins {
     id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    id 'com.google.firebase.crashlytics'
-    // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"
+    id "com.google.firebase.crashlytics"
 }
 
 def localProperties = new Properties()
@@ -60,6 +58,15 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+        }
+
+        applicationVariants.all { variant ->
+            variant.outputs.each {
+            output ->
+                def name = "observatory-v${variant.versionName}.apk"
+
+                output.outputFileName = name
+            }
         }
     }
 }
