--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,5 +54,16 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleURLSchemes</key>
+		<array>
+		<string>videogameobservatory</string>
+		</array>
+		<key>CFBundleURLName</key>
+		<string>getobservatory.app</string>
+	</dict>
+	</array>
 </dict>
 </plist>
