--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,8 +38,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
-                    android:scheme="benjaminabel"
-                    android:host="observatory.com" />
+                    android:scheme="videogameobservatory"
+                    android:host="getobservatory.app" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
