--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ dependencies:
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.5.2
   app_links: ^6.2.0
-  fl_chart: ^0.68.0
+  fl_chart: ^0.69.0
+  supabase_auth_ui: ^0.5.1
 
 dependency_overrides:
   win32: ^5.5.4
