--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ dev_dependencies:
   emulators: ^0.6.1
   test:
   flutter_native_splash: ^2.4.0
+  sentry_dart_plugin: ^2.1.0
 
 flutter:
   uses-material-design: true
