Use flutter_config

--- a/.gitignore
+++ b/.gitignore
@@ -235,6 +235,7 @@ xcuserdata/
 !.vscode/extensions.json
 
 secrets.json
+secrets.env
 google-services.json
 GoogleService-Info.plist
 firebase_options.dart
