--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   json_annotation: ^4.9.0
   dio: ^5.6.0
   logger: ^2.3.0
-  flex_color_scheme: ^7.3.1
+  flex_color_scheme: ^8.0.0-dev.1
   google_fonts: ^6.2.1
   html_unescape: ^2.0.0
   country_picker: ^2.0.26
