--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,6 @@ dependencies:
   google_fonts: ^6.2.1
   html_unescape: ^2.0.0
   country_picker: ^2.0.26
-  dio_cache_interceptor: ^3.5.0
-  dio_cache_interceptor_hive_store: ^3.2.2
-  path_provider: ^2.1.3
   go_router: ^14.2.6
   share_plus: ^10.0.0
   intl: ^0.19.0
@@ -61,6 +58,7 @@ dependencies:
   chewie: ^1.8.5
   youtube_player_flutter: ^9.1.1
   video_player: ^2.9.2
+  flutter_cache_manager: ^3.4.1
 
 flutter_launcher_icons:
   android:
