--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter_slidable: ^3.1.0
   collection: ^1.18.0
   awesome_flutter_extensions: ^1.2.0
-  in_app_purchase: ^3.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
@@ -57,6 +56,7 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   video_player: ^2.9.2
   flutter_cache_manager: ^3.4.1
+  purchases_flutter: ^8.2.1
 
 flutter_launcher_icons:
   android:
