--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   json_annotation: ^4.9.0
   dio: ^5.6.0
   logger: ^2.3.0
-  flex_color_scheme: ^8.0.0-dev.1
+  flex_color_scheme: ^8.0.2
   google_fonts: ^6.2.1
   html_unescape: ^2.0.0
   country_picker: ^2.0.26
@@ -46,7 +46,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.5.2
   app_links: ^6.2.0
-  fl_chart: ^0.69.0
+  fl_chart: ^0.70.0
   http: ^1.2.2
   oauth2: ^2.0.3
   flutter_secure_storage: ^9.2.2
