--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,9 @@ dev_dependencies:
   sentry_dart_plugin: ^2.1.0
   dart_code_metrics_presets: ^2.17.0
 
+sentry:
+  ignore_missing: true
+
 flutter:
   uses-material-design: true
   assets:
